# lokinet

./: .clang-format  .clang-tidy  .dir-locals.el  .dockerignore  .drone.jsonnet  .drone.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CONTRIBUTING_es.md  CROSSCOMPILE.md  Doxyfile  LICENSE  LICENSE.txt  Makefile  README-windows.md  ROADMAP.md  TODO.md  build.gradle  build.xml  daemon.ini  delete_me  development.md  i2p.rocks.signed.txt  lokinet-bootstrap  lokinet-bootstrap.ps1  lokinet-docker.ini  misc_notes.txt  module.modulemap  motto.txt  readme.md  readme_es.md  readme_fr.md  readme_ru.md  rebuild.sh  (+5 more)
contrib/liblokinet/: CMakeLists.txt  readme.md  tcp_connect.cpp  tcp_listen.cpp  udptest.cpp
crypto/: CMakeLists.txt  readme.md
crypto/blake2b/: blake2.h  blake2b-compress-avx2.c  blake2b-compress-avx2.h  blake2b-compress-ref.c  blake2b-compress-sse41.c  blake2b-compress-sse41.h  blake2b-compress-ssse3.c  blake2b-compress-ssse3.h  blake2b-load-avx2.h  blake2b-load-sse2.h  blake2b-load-sse41.h  blake2b-ref.c  generichash_blake2b.c
crypto/chacha20/: stream_chacha20.c  stream_chacha20.h
crypto/csrng/: randombytes.c  randombytes_salsa20_random.c
crypto/curve25519/: crypto_scalarmult.c  scalarmult_curve25519.c  scalarmult_curve25519.h
crypto/ed25519/: crypto_box.c  crypto_sign.c  sign_ed25519.c
crypto/libntrup/: readme.md
crypto/libsodium/: init.c  readme.txt  runtime.c
crypto/salsa20/: core_salsa_ref.c  stream_salsa20.c  stream_salsa20.h
crypto/secmem/: secmem.c
crypto/sha512/: sha512.c
crypto/verify/: crypto_verify.c
crypto/xchacha20/: hchacha.c  stream_xchacha20.c
daemon/: CMakeLists.txt  Lokinet.modulemap.in  dht_find.cpp  dht_spider.cpp  dhtutil.cpp  dns.cpp  lokinet-bootstrap.cpp  lokinet-vpn  lokinet-vpn.cpp  lokinet.cpp  lokinet.mm  lokinet.swift  lokinetctl.cpp  lokinetmon.cpp  main.c  main.cpp  rcutil.cpp  readme.md
daemon/swift/: LokinetMain.swift
jni/: CMakeLists.txt  lokinet_android.cpp  lokinet_config.cpp  lokinet_daemon.cpp  lokinet_jni_common.hpp  lokinet_jni_vpnio.hpp  lokinet_vpn.cpp  network_loki_lokinet_LokinetConfig.h  network_loki_lokinet_LokinetDaemon.h  network_loki_lokinet_LokinetVPN.h  network_loki_lokinet_LokinetVPN_VPNInfo.h  network_loki_lokinet_Lokinet_JNI.h  readme.md
libabyss/: CMakeLists.txt  main.cpp  readme.md
libabyss/include/: libabyss.h  libabyss.hpp
libabyss/src/: client.cpp  http.cpp  json.cpp  md5.cpp  server.cpp
libutp/: CMakeLists.txt  Makefile  README.md  libutp_inet_ntop.cpp  libutp_inet_ntop.h  parse_log.py  utp_hash.h  utp_internal.cpp  utp_internal.h  utp_packedsockaddr.cpp  utp_utils.cpp
llarp/: CMakeLists.txt  CMakeLists_old.txt  address_info.c  address_info.cpp  address_info.hpp  aligned.cpp  aligned.hpp  app.xml  apple.hpp  arpc.cpp  bencode.c  bencode.cpp  bencode.h  bencode.hpp  bits.cpp  bootstrap-fallbacks.cpp.in  bootstrap.cpp  bootstrap.hpp  bootstrap_fallbacks.cpp  buffer.cpp  buffer.h  buffer.hpp  codel.cpp  codel.hpp  common.cpp  common.hpp  config.cpp  config.hpp  context.cpp  context.hpp  crypto.cpp  crypto.h  crypto.hpp  crypto_async.c  crypto_async.cpp  crypto_libsodium.cpp  db.cpp  db.hpp  defaults.cpp  defaults.hpp  (+172 more)
llarp/android/: ifaddrs.c  ifaddrs.h  service_manager.cpp
llarp/api/: client.cpp  create_session.cpp  message.cpp  parser.cpp
llarp/apple/: CMakeLists.txt  DNSTrampoline.h  DNSTrampoline.m  PacketTunnelProvider.m  PacketTunnelProvider.swift  apple_logger.cpp  apple_logger.hpp  apple_logger.mm  context.hpp  context_wrapper.cpp  context_wrapper.h  framework.mm  route_manager.cpp  route_manager.hpp  service_manager.cpp  vpn_interface.cpp  vpn_interface.hpp  vpn_platform.cpp  vpn_platform.hpp
llarp/config/: config.cpp  config.hpp  definition.cpp  definition.hpp  ini.cpp  ini.hpp  key_manager.cpp  key_manager.hpp
llarp/consensus/: edge_selector.cpp  edge_selector.hpp  reachability_testing.cpp  reachability_testing.hpp  table.cpp  table.hpp
llarp/constants/: apple.hpp  defaults.cpp  defaults.hpp  evloop.hpp  files.hpp  limits.cpp  limits.hpp  link_layer.cpp  link_layer.hpp  net.hpp  path.cpp  path.hpp  platform.hpp  proto.cpp  proto.hpp  time.hpp  version.cpp  version.cpp.in  version.h  version.hpp  version.rc
llarp/crypto/: constants.cpp  constants.hpp  crypto.cpp  crypto.hpp  crypto_libsodium.cpp  crypto_libsodium.hpp  crypto_noop.cpp  crypto_noop.hpp  ec.cpp  ec.hpp  encrypted.cpp  encrypted.hpp  encrypted_frame.cpp  encrypted_frame.hpp  types.cpp  types.hpp
llarp/curvecp/: impl.cpp  server.cpp
llarp/dht/: bucket.cpp  bucket.hpp  context.cpp  context.hpp  decode.cpp  dht.cpp  dht.h  dht_immediate.cpp  explorenetworkjob.cpp  explorenetworkjob.hpp  find_intro.cpp  find_router.cpp  got_intro.cpp  got_router.cpp  kademlia.cpp  kademlia.hpp  key.cpp  key.hpp  localrouterlookup.cpp  localrouterlookup.hpp  localserviceaddresslookup.cpp  localserviceaddresslookup.hpp  localtaglookup.cpp  localtaglookup.hpp  message.cpp  message.hpp  node.cpp  node.hpp  publish_intro.cpp  publishservicejob.cpp  search_job.cpp  (+13 more)
pybind/: CMakeLists.txt  common.hpp  lokinet.py  module.cpp  readme.md  test_lokinet.py  util.py
test/: CMakeLists.txt  alignedbuffer_unittest.cpp  api_unittest.cpp  base32_unittest.cpp  check_main.cpp  dht_unittest.cpp  dtls_unittest.cpp  encrypted_frame_unittest.cpp  exit_unittest.cpp  hiddenservice_unittest.cpp  jsonrpc_unittest.cpp  link_layer_unittest.cpp  llarp_test.cpp  llarp_test.hpp  main.cpp  net_unittest.cpp  obtain_exit_unittest.cpp  pq_unittest.cpp  readme.md  test_async_cipher.c  test_async_dh.c  test_cpp.cpp  test_dns_unit.cpp  test_dnsc_unit.cpp  test_dnsd_unit.cpp  test_dnslib.cpp  test_dtlslink_unit.cpp  test_libabyss.cpp  test_llarp_aligned.cpp  test_llarp_bencode.cpp  test_llarp_dht_key.cpp  test_llarp_dns.cpp  test_llarp_dnsd.cpp  test_llarp_encrypted_frame.cpp  test_llarp_net.cpp  test_llarp_net_inaddr.cpp  test_llarp_queue.cpp  test_llarp_queue_manager.cpp  test_llarp_router.cpp  test_llarp_router_contact.cpp  (+8 more)
ui-ios/: CMakeLists.txt  ios-toolchain.cmake
(+2429 files in other folders)
